# bangumi-hs

./: .gitignore  AGENTS.md  CLAUDE.md  TODO.md  bangumi-hs.cabal  cabal.project  fourmolu.yaml  schema.lt.hcl
.claude/agents/: haskell-code-reviewer.md
app/: Main.hs
src/: App.hs  Bangumi.hs  Config.hs  Server.hs
src/BgmTV/: Api.hs  Client.hs  Types.hs
src/BgmTV/Api/: Subject.hs
src/BgmTV/Types/: Subject.hs
src/Data/Types/: HTML.hs  Rss.hs
src/Effectful/: SQLite.hs  Servant.hs
src/Log/Backend/: File.hs
src/Mikan/: Api.hs  Client.hs  Types.hs
src/Moe/: Api.hs  App.hs  Config.hs  Environment.hs  Log.hs  Logging.hs  Middlewares.hs  Model.hs  Server.hs  ThirdParty.hs
src/Moe/Api/: Search.hs
src/Moe/Database/: Model.hs
src/Moe/Environment/: Config.hs  Env.hs
src/Moe/Model/: Bangumi.hs  Rss.hs  Torrent.hs
src/Moe/Parser/: BgmParser.hs  Internal.hs
src/Moe/Parser/Internal/: Util.hs
src/Moe/Server/: Api.hs
src/MoeWeb/: Routes.hs  Server.hs  Types.hs
src/MoeWeb/API/: Errors.hs  Root.hs  Routes.hs  Search.hs
src/MoeWeb/Common/: Tracing.hs
src/Network/HTTP/Types/: URL.hs
src/Rss/: Types.hs
src/Servant/: Display.hs  Util.hs
src/Servant/API/ContentTypes/: HTML.hs  RSS.hs
src/Server/Api/: Bangumi.hs
src/core/Moe/: Environment.hs  Model.hs  Monad.hs
src/libs/BgmTV/: Client.hs  Types.hs
src/libs/Mikan/: Api.hs  Client.hs  Types.hs
src/libs/Network/Types/HTTP/: URL.hs
src/libs/Rss/: Types.hs
src/libs/Servant/: Util.hs
src/libs/Servant/API/ContentTypes/: RSS.hs
src/web/MoeWeb/: Routes.hs  Server.hs  Types.hs
src/web/MoeWeb/API/: Routes.hs
test/: Main.hs
test/Moe/Parser/: BgmParserSpec.hs
test/Moe/Parser/Internal/: UtilSpec.hs
web/: package.json  vite.config.ts
web/src/: routeTree.gen.ts
web/src/api/: example.ts  generated.ts  index.ts
web/src/components/layout/: authenticated-layout.tsx
web/src/components/ui/: command.tsx
web/src/features/dashboard/: index.tsx
web/src/features/search/: query.ts
web/src/features/search/components/: search-dialog.tsx  search.tsx
web/src/features/settings/: index.tsx
web/src/lib/api/: index.ts  types.ts
