cabal-version: 3.4
name: bangumi-hs
version: 0.1.0.0
license: MIT
license-file: LICENSE
author: birdgg
maintainer: birdeggegg@gmail.com
build-type: Simple
extra-doc-files: CHANGELOG.md

common deps
  build-depends:
    aeson,
    base ^>=4.21.0.0,
    bytestring,
    text,

common extensions
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DeriveGeneric
    DuplicateRecordFields
    MultiWayIf
    OverloadedRecordDot
    OverloadedStrings
    PartialTypeSignatures
    TypeFamilies
    ViewPatterns

  default-language: GHC2024

common ghc-options
  ghc-options:
    -Wall
    -Werror

library core
  import: extensions, deps, ghc-options
  hs-source-dirs: ./src/core
  exposed-modules:
    Moe.Environment
    Moe.Model
    Moe.Monad

  build-depends:
    effectful,
    persistent,
    persistent-sqlite,
    persistent-template,

library libs
  import: extensions, deps, ghc-options
  hs-source-dirs: ./src/libs
  exposed-modules:
    BgmTV.Api
    BgmTV.Client
    BgmTV.Types
    Mikan.Api
    Mikan.Client
    Mikan.Types
    Network.Types.HTTP.URL
    Rss.Types
    Servant.API.ContentTypes.RSS
    Servant.Util

  build-depends:
    extra,
    http-client,
    http-client-tls,
    http-media,
    http-types,
    scalpel-core,
    servant,
    servant-client,
    servant-client-core,
    servant-server,
    tagsoup,
    time,

library moe-web
  import: extensions, deps, ghc-options
  hs-source-dirs: ./src/web
  exposed-modules:
    MoeWeb.Server

  other-modules:
    MoeWeb.API.Routes
    MoeWeb.Routes
    MoeWeb.Types

  build-depends:
    bangumi-hs:core,
    bangumi-hs:libs,
    base ^>=4.21.0.0,
    effectful,
    exceptions,
    extra,
    http-client,
    http-client-tls,
    http-media,
    http-types,
    megaparsec,
    mtl,
    persistent,
    persistent-sqlite,
    persistent-template,
    pretty-simple,
    resource-pool,
    scalpel-core,
    servant,
    servant-client,
    servant-client-core,
    servant-server,
    tagsoup,
    time,
    wai,
    warp

executable moe-server
  import: extensions, ghc-options
  main-is: Main.hs
  build-depends:
    base ^>=4.21.0.0,
    bangumi-hs:moe-web,
  hs-source-dirs: app
