cabal-version: 3.4
name: bangumi-hs
version: 0.1.0.0
license: MIT
license-file: LICENSE
author: birdgg
maintainer: birdeggegg@gmail.com
build-type: Simple
extra-doc-files: CHANGELOG.md

common deps
  build-depends:
    aeson,
    base ^>=4.21.0.0,
    bytestring,
    containers,
    text,

common extensions
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DeriveGeneric
    DuplicateRecordFields
    MultiWayIf
    OverloadedRecordDot
    OverloadedStrings
    PartialTypeSignatures
    TypeFamilies
    ViewPatterns

  default-language: GHC2024

common ghc-options
  ghc-options:
    -Wall
    -Werror

library moe
  import: extensions, deps, ghc-options
  hs-source-dirs: ./src/
  exposed-modules:
    MoeWeb.Server

  other-modules:
    Effectful.SQLite
    Log.Backend.File
    Moe.Environment
    Moe.Environment.Config
    Moe.Environment.Env
    Moe.Logging
    Moe.Model
    Moe.Monad
    MoeWeb.API.Routes
    MoeWeb.Common.Tracing
    MoeWeb.Routes
    MoeWeb.Types

  build-depends:
    base ^>=4.21.0.0,
    colourista,
    effectful,
    effectful-th,
    envparse,
    http-client,
    http-client-tls,
    http-media,
    http-types,
    log-base,
    log-effectful,
    megaparsec,
    migrant-core,
    migrant-sqlite-simple,
    monad-time,
    monad-time-effectful,
    mtl,
    pretty-simple,
    resource-pool,
    scalpel-core,
    servant,
    servant-client,
    servant-client-core,
    servant-server,
    sqlite-simple,
    tagsoup,
    text-display,
    time,
    unliftio-pool,
    wai,
    wai-log,
    warp,

executable moe-server
  import: extensions, ghc-options
  main-is: Main.hs
  build-depends:
    bangumi-hs:moe,
    base ^>=4.21.0.0,

  hs-source-dirs: app
